# oh-my-wrist

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_to_pyPI  release-garmin.yml
.opencode/: opencode.json
docs/: CONTRIBUTING.md  INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md
garmin/: manifest.xml  monkey.jungle
garmin/resources/drawables/: drawables.xml
garmin/resources/strings/: strings.xml
garmin/source/: BleManager.mc  ConnectionIdModel.mc  ConnectionIdView.mc  HistoryDecoder.mc  IconCatalog.mc  OhMyWristApp.mc  OhMyWristDelegate.mc  OhMyWristStatsView.mc  OhMyWristUsageView.mc  OhMyWristView.mc  Palette.mc  StatsModel.mc  StatusModel.mc  TextUtil.mc  UsageModel.mc
garmin/tools/: build_spinner_frames.py
opencode/plugins/: oh_my_wrist_opencode.ts
src/ohm/: __init__.py  __main__.py  ble_daemon.py  ble_daemon_main.py  config.py  history_encoder.py  hook_relay.py  icons.py  install.py  main.py  project.toml  protocol.py  provider_types.py  session_state.py  session_tracker.py  status_formatter.py  statusline_relay.py
src/ohm/adapters/: __init__.py  claude_adapter.py  opencode_adapter.py
src/ohm/platform/: __init__.py  bluez_agent.py  linux.py  macos.py  windows.py  windows_ble.py
tests/: test_ble_daemon.py  test_ble_daemon_extended.py  test_ble_daemon_features.py  test_claude_adapter.py  test_claude_session_simulation.py  test_config.py  test_destructive.py  test_end_to_end_normalization.py  test_garmin_connection_id_menu.py  test_history_encoder.py  test_history_frame.py  test_hook_relay.py  test_hook_relay_extended.py  test_install.py  test_install_extended.py  test_install_statusline.py  test_main_cli.py  test_notification_spacing.py  test_opencode_adapter.py  test_protocol.py  test_protocol_extended.py  test_provider_types.py  test_session_state.py  test_session_tracker.py  test_simulate_usage.py  test_status_formatter.py  test_status_formatter_extended.py  test_statusline_relay.py  test_usage_daemon.py
tools/: build_garmin.sh  check_connection.py
